# amazon-sales-chat-bot

./: .gitignore  README.md
backend/: langgraph.json  main.py  pyproject.toml  question.txt
backend/src/: build_graph.py  edges.py  state_template.py  structured_output.py
backend/src/generate/: generate.py
backend/src/grade_documents/: grade_document.py
backend/src/retrieve/: __init__.py  retrieve.py
backend/src/search_tool/: web_search_tool.py
backend/src/transform_query/: transform_query.py
frontend/: package.json
frontend/src/: App.js  index.css  index.js
frontend/src/components/: chatBotBody.jsx  request.js
